--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -103,20 +103,21 @@
                 <!-- SLIDE  -->
                 <li data-index="rs-31" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="300" data-rotate="0" data-saveperformance="off" data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
                     <!-- MAIN IMAGE -->
-                    <img src="http://placehold.it/1920x980" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+                    
+                    <%= image_tag ("otos-1.jpg") %>
                     <!-- LAYERS -->
 
                     <!-- LAYER NR. 1 -->
-                    <div class="tp-caption   tp-resizeme" id="slide-31-layer-1" data-x="['left','left','center','center']" data-hoffset="['30','30','1','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-67','-68','-107','-76']" data-fontsize="['100','100','76','45']" data-lineheight="['100','100','150','49']" data-letterspacing="['-3','-3','-3','0']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"delay":10,"split":"chars","splitdelay":0.1,"speed":410,"split_direction":"forward","frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]' data-textAlign="['left','left','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 5; white-space: nowrap; font-size: 100px; line-height: 100px; font-weight: 800; color: #ffffff; letter-spacing: -3px;font-family:Muli;">Digital Agency </div>
+                    <div class="tp-caption   tp-resizeme" id="slide-31-layer-1" data-x="['left','left','center','center']" data-hoffset="['30','30','1','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-67','-68','-107','-76']" data-fontsize="['100','100','76','45']" data-lineheight="['100','100','150','49']" data-letterspacing="['-3','-3','-3','0']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"delay":10,"split":"chars","splitdelay":0.1,"speed":410,"split_direction":"forward","frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]' data-textAlign="['left','left','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 5; white-space: nowrap; font-size: 100px; line-height: 100px; font-weight: 800; color: #000000; letter-spacing: -3px;font-family:Muli;">L'agence digitale </div>
 
                     <!-- LAYER NR. 2 -->
-                    <div class="tp-caption   tp-resizeme" id="slide-31-layer-5" data-x="['left','left','center','center']" data-hoffset="['30','30','0','0']" data-y="['top','top','middle','middle']" data-voffset="['460','408','0','33']" data-fontsize="['18','18','18','15']" data-fontweight="['500','500','500','400']" data-width="['579','579','579','357']" data-height="none" data-whitespace="normal" data-type="text" data-responsive_offset="on" data-frames='[{"delay":790,"speed":1080,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]' data-textAlign="['inherit','inherit','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; min-width: 579px; max-width: 579px; white-space: normal; font-size: 18px; line-height: 35px; font-weight: 500; color: #ffffff; letter-spacing: 0px;font-family:Poppins;">A magical and revolutionary device at an unbelievable price , Computers help people help people </div>
+                    <div class="tp-caption   tp-resizeme" id="slide-31-layer-5" data-x="['left','left','center','center']" data-hoffset="['30','30','0','0']" data-y="['top','top','middle','middle']" data-voffset="['460','408','0','33']" data-fontsize="['18','18','18','15']" data-fontweight="['500','500','500','400']" data-width="['579','579','579','357']" data-height="none" data-whitespace="normal" data-type="text" data-responsive_offset="on" data-frames='[{"delay":790,"speed":1080,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]' data-textAlign="['inherit','inherit','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; min-width: 579px; max-width: 579px; white-space: normal; font-size: 18px; line-height: 35px; font-weight: 500; color: #000000; letter-spacing: 0px;font-family:Poppins;">A magical and revolutionary device at an unbelievable price , Computers help people help people </div>
 
                     <!-- LAYER NR. 3 -->
-                    <div class="tp-caption   tp-resizeme" id="slide-31-layer-2" data-x="['left','left','center','center']" data-hoffset="['30','30','-11','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-151','-153','-198','-120']" data-fontsize="['25','25','25','16']" data-color="['rgb(255,255,255)','rgb(255,255,255)','rgb(237,237,237)','rgb(255,255,255)']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"delay":1430,"split":"words","splitdelay":0.1,"speed":570,"split_direction":"forward","frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]' data-textAlign="['left','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 7; white-space: nowrap; font-size: 25px; line-height: 30px; font-weight: 600; color: #ffffff; letter-spacing: 0px;font-family:Poppins;text-transform:uppercase;">Your Vision, Our Future </div>
+                    <div class="tp-caption   tp-resizeme" id="slide-31-layer-2" data-x="['left','left','center','center']" data-hoffset="['30','30','-11','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-151','-153','-198','-120']" data-fontsize="['25','25','25','16']"  data-width="none" data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"delay":1430,"split":"words","splitdelay":0.1,"speed":570,"split_direction":"forward","frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]' data-textAlign="['left','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 7; white-space: nowrap; font-size: 25px; line-height: 30px; font-weight: 600; color: #000000; letter-spacing: 0px;font-family:Poppins;text-transform:uppercase;">Your Vision, Our Future </div>
 
                     <!-- LAYER NR. 4 -->
-                    <div class="tp-caption rev-btn " id="slide-31-layer-3" data-x="['left','left','center','center']" data-hoffset="['30','30','0','0']" data-y="['top','top','top','top']" data-voffset="['567','512','552','476']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="button" data-responsive_offset="on" data-responsive="off" data-frames='[{"delay":1830,"speed":1010,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"0","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgb(255,255,255);bg:rgb(87,10,116);bs:solid;bw:0 0 0 0;"}]' data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[20,20,20,15]" data-paddingright="[55,55,55,40]" data-paddingbottom="[20,20,20,15]" data-paddingleft="[55,55,55,40]" style="z-index: 8; white-space: nowrap; font-size: 17px; line-height: 17px; font-weight: 500; color: rgba(255,255,255,1); letter-spacing: 0px ;font-family:Poppins;background:linear-gradient(180deg, rgba(255,94,58,1) 0%, rgba(255,42,104,1) 100%);border-color:rgba(0,0,0,1);outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;">Discover More </div>
+                    <div class="tp-caption rev-btn " id="slide-31-layer-3" data-x="['left','left','center','center']" data-hoffset="['30','30','0','0']" data-y="['top','top','top','top']" data-voffset="['567','512','552','476']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="button" data-responsive_offset="on" data-responsive="off" data-frames='[{"delay":1830,"speed":1010,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"0","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgb(255,255,255);bg:rgb(87,10,116);bs:solid;bw:0 0 0 0;"}]' data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[20,20,20,15]" data-paddingright="[55,55,55,40]" data-paddingbottom="[20,20,20,15]" data-paddingleft="[55,55,55,40]" style="z-index: 8; white-space: nowrap; font-size: 17px; line-height: 17px; font-weight: 500; color: rgba(255,255,255,1); letter-spacing: 0px ;font-family:Poppins;background:linear-gradient(180deg, rgba(255,94,58,1) 0%, rgba(255,42,104,1) 100%);border-color:rgba(0,0,0,1);outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;">Nous contacter </div>
                 </li>
             </ul>
             <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
@@ -129,8 +130,8 @@
         <div class="container">
 
             <div class="nile-title layout-1   text-left">
-                <div class="sub-title">Making your Life Easier</div>
-                <h2>Our Servies</h2>
+                <div class="sub-title">Vous aidez à améliorer votre image digitale</div>
+                <h2>Nos services</h2>
             </div>
 
 
@@ -140,9 +141,9 @@
                 <!-- item -->
                 <div class="col-lg-4">
                     <div class="fizo-img-text layout-1 ba-1">
-                        <h3>Marketing</h3>
+                        <h3>SEO</h3>
                         <div class="dis">We master the ever-changing art of adtech activation with an AI foundation, tech spine and .... </div>
-                        <a class="more" href="#">Read More</a>
+                        <a class="more" href="#">Lire plus</a>
                     </div>
                 </div>
                 <!-- END item -->
@@ -151,9 +152,9 @@
                 <!-- item -->
                 <div class="col-lg-4">
                     <div class="fizo-img-text layout-1 ba-2">
-                        <h3>Data & Consulting</h3>
+                        <h3>Site web</h3>
                         <div class="dis">We master the ever-changing art of adtech activation with an AI foundation, tech spine and .... </div>
-                        <a class="more" href="#">Read More</a>
+                        <a class="more" href="#">Lire plus</a>
                     </div>
                 </div>
                 <!-- END item -->
@@ -162,9 +163,9 @@
                 <!-- item -->
                 <div class="col-lg-4">
                     <div class="fizo-img-text layout-1 ba-3">
-                        <h3>Technologies</h3>
+                        <h3>Data science</h3>
                         <div class="dis">We master the ever-changing art of adtech activation with an AI foundation, tech spine and .... </div>
-                        <a class="more" href="#">Read More</a>
+                        <a class="more" href="#">Lire plus</a>
                     </div>
                 </div>
                 <!-- END item -->
@@ -181,7 +182,7 @@
             <div class="row no-gutters">
                 <div class="col-lg-5">
                     <div class="fizo-image layout-2">
-                        <img src="http://placehold.it/650x830" alt="">
+                        <%= image_tag "otos-9.jpg"%>
                     </div>
                 </div>
                 <div class="col-lg-1"></div>
@@ -271,8 +272,8 @@
                 <div class="col-lg-4">
                     <div class="fizo-blog layout-2">
                         <div class="img-in">
-                            <img src="http://placehold.it/600x450" alt="">
-                            <a href="#" class="read-more flex-center">Read More</a>
+                            <%= image_tag "otos-11.jpg"%>
+                            <a href="#" class="read-more flex-center">Lire plus</a>
                         </div>
                         <ul class="meta">
                             <li class="author"><strong>By : <a href="#">Rabie Elkheir </a></strong> </li>
@@ -286,8 +287,8 @@
                 <div class="col-lg-4">
                     <div class="fizo-blog layout-2">
                         <div class="img-in">
-                            <img src="http://placehold.it/600x450" alt="">
-                            <a href="#" class="read-more flex-center">Read More</a>
+                            <%= image_tag "otos-11.jpg"%>
+                            <a href="#" class="read-more flex-center">Lire plus</a>
                         </div>
                         <ul class="meta">
                             <li class="author"><strong>By : <a href="#">Rabie Elkheir </a></strong> </li>
@@ -301,8 +302,8 @@
                 <div class="col-lg-4">
                     <div class="fizo-blog layout-2">
                         <div class="img-in">
-                            <img src="http://placehold.it/600x450" alt="">
-                            <a href="#" class="read-more flex-center">Read More</a>
+                            <%= image_tag "otos-11.jpg"%>
+                            <a href="#" class="read-more flex-center">Lire plus</a>
                         </div>
                         <ul class="meta">
                             <li class="author"><strong>By : <a href="#">Rabie Elkheir </a></strong> </li>
@@ -538,6 +539,8 @@
                 <li><a href="#"><img src="http://placehold.it/100x100" alt=""></a></li>
             </ul>
         </div>
-
+        
 
     </div>
+
+ 
